; ModuleID = '/home/carl/AnghaBench/wcdb/backup/extr_mm_recover.c_dump_read_varint.c'
source_filename = "/home/carl/AnghaBench/wcdb/backup/extr_mm_recover.c_dump_read_varint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MMBAK_RET_FAILED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @dump_read_varint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dump_read_varint(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %10, align 4
  store i32 0, i32* %11, align 4
  br label %12

12:                                               ; preds = %28, %3
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @dump_read_stream(i32* %13, i32* %8, i32 1)
  store i32 %14, i32* %9, align 4
  %15 = load i32, i32* %9, align 4
  %16 = icmp ne i32 %15, 1
  br i1 %16, label %17, label %19

17:                                               ; preds = %12
  %18 = load i32, i32* @MMBAK_RET_FAILED, align 4
  store i32 %18, i32* %4, align 4
  br label %41

19:                                               ; preds = %12
  %20 = load i32, i32* %8, align 4
  %21 = and i32 %20, 127
  %22 = load i32, i32* %11, align 4
  %23 = shl i32 %21, %22
  %24 = load i32, i32* %10, align 4
  %25 = or i32 %24, %23
  store i32 %25, i32* %10, align 4
  %26 = load i32, i32* %11, align 4
  %27 = add nsw i32 %26, 7
  store i32 %27, i32* %11, align 4
  br label %28

28:                                               ; preds = %19
  %29 = load i32, i32* %8, align 4
  %30 = and i32 %29, 128
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %12, label %32

32:                                               ; preds = %28
  %33 = load i32, i32* %7, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %38

35:                                               ; preds = %32
  %36 = load i32, i32* %10, align 4
  %37 = xor i32 %36, -1
  store i32 %37, i32* %10, align 4
  br label %38

38:                                               ; preds = %35, %32
  %39 = load i32, i32* %10, align 4
  %40 = load i32*, i32** %6, align 8
  store i32 %39, i32* %40, align 4
  store i32 0, i32* %4, align 4
  br label %41

41:                                               ; preds = %38, %17
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local i32 @dump_read_stream(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
